--- a/css/canvas/canvas-node-text-color-invert.css
+++ b/css/canvas/canvas-node-text-color-invert.css
@@ -2,10 +2,10 @@
 FAS - Canvas Node Text Color Invert
 Author: ElsaTam (Kapirklaa in Discord)
 */
-.canvas-node:has(.tag[href="#node-text-color-invert"]):not(.is-editing) .markdown-preview-view {
+.canvas-node:has(.tag[href="#node-text-color-invert"], .node-text-color-invert):not(.is-editing) .markdown-preview-view {
   color: rgb(var(--mono-rgb-0));
 }
 
-.canvas-node:not(.is-editing) .tag[href="#node-text-color-invert"] {
+.canvas-node:not(.is-editing) :is(.tag[href="#node-text-color-invert"], .node-text-color-invert) {
   display: none;
 }
