--- a/scss/canvas/_canvas-node-title-arcane.scss
+++ b/scss/canvas/_canvas-node-title-arcane.scss
@@ -4,7 +4,7 @@ body {
     --noise: url("data:image/svg+xml,%3Csvg viewBox='0 0 600 600' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch' /%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
 }
 
-.canvas-node:has(.tag[href="#node-title-arcane"]):not(.is-editing) {
+.canvas-node:has(.tag[href="#node-title-arcane"], .node-title-arcane):not(.is-editing) {
     --cutout-corner-angle: 1.5em;
     --cutout-outline-inset: 0;
     --cutout-outline-thickness: 5px;
@@ -42,6 +42,6 @@ body {
     }
 }
 
-.canvas-node:not(.is-editing) .tag[href="#node-title-arcane"] {
+.canvas-node:not(.is-editing) :is(.tag[href="#node-title-arcane"], .node-title-arcane) {
     display: none;
 }
