--- a/css/canvas/canvas-node-comic.css
+++ b/css/canvas/canvas-node-comic.css
@@ -2,15 +2,15 @@
 FAS - Canvas Node Comic
 Author: ElsaTam (Kapirklaa in Discord)
 */
-.canvas-node:has(.tag[href="#node-comic"]):not(.is-editing) .canvas-node-container {
+.canvas-node:has(.tag[href="#node-comic"], .node-comic):not(.is-editing) .canvas-node-container {
   box-shadow: none;
   border-radius: 255px 15px 255px 15px/15px 255px 15px 255px;
 }
-.canvas-node:has(.tag[href="#node-comic"]):not(.is-editing) .markdown-preview-view {
+.canvas-node:has(.tag[href="#node-comic"], .node-comic):not(.is-editing) .markdown-preview-view {
   font-family: "VTC Letterer Pro", "Comic Sans", "Arial", sans-serif;
 }
 
-.canvas-node:not(.is-editing) .tag[href="#node-comic"] {
+.canvas-node:not(.is-editing) :is(.tag[href="#node-comic"], .node-comic) {
   display: none;
 }
 
