--- a/css/canvas/canvas-node-image.css
+++ b/css/canvas/canvas-node-image.css
@@ -2,36 +2,36 @@
 FAS - Canvas Node Image
 Author: ElsaTam (Kapirklaa in Discord)
 */
-.canvas-node:has(.tag[href="#node-image"]):not(.is-editing) {
+.canvas-node:has(.tag[href="#node-image"], .node-image):not(.is-editing) {
   --p-spacing: 0;
   --image-shadow-offset: 0;
   container: node/size;
 }
-.canvas-node:has(.tag[href="#node-image"]):not(.is-editing) .canvas-node-container {
+.canvas-node:has(.tag[href="#node-image"], .node-image):not(.is-editing) .canvas-node-container {
   border: none;
   box-shadow: none;
   border-radius: 0;
 }
-.canvas-node:has(.tag[href="#node-image"]):not(.is-editing) .canvas-node-content {
+.canvas-node:has(.tag[href="#node-image"], .node-image):not(.is-editing) .canvas-node-content {
   background: none;
 }
-.canvas-node:has(.tag[href="#node-image"]):not(.is-editing) .markdown-preview-view {
+.canvas-node:has(.tag[href="#node-image"], .node-image):not(.is-editing) .markdown-preview-view {
   padding: 0;
   overflow: visible;
 }
-.canvas-node:has(.tag[href="#node-image"]):not(.is-editing) .markdown-preview-view::before,
-.canvas-node:has(.tag[href="#node-image"]):not(.is-editing) .markdown-preview-view::after {
+.canvas-node:has(.tag[href="#node-image"], .node-image):not(.is-editing) .markdown-preview-view::before,
+.canvas-node:has(.tag[href="#node-image"], .node-image):not(.is-editing) .markdown-preview-view::after {
   content: none;
 }
-.canvas-node:has(.tag[href="#node-image"]):not(.is-editing) br {
+.canvas-node:has(.tag[href="#node-image"], .node-image):not(.is-editing) br {
   display: none;
 }
-.canvas-node:has(.tag[href="#node-image"]):not(.is-editing) img {
+.canvas-node:has(.tag[href="#node-image"], .node-image):not(.is-editing) img {
   width: 100cqw;
   height: 100cqh;
   object-fit: cover;
 }
 
-.canvas-node:not(.is-editing) .tag[href="#node-image"] {
+.canvas-node:not(.is-editing) :is(.tag[href="#node-image"], .node-image) {
   display: none;
 }
