--- a/scss/canvas/_canvas-node-crime-scene-tape.scss
+++ b/scss/canvas/_canvas-node-crime-scene-tape.scss
@@ -1,4 +1,4 @@
-.canvas-node:has(.tag[href="#node-crime-scene-tape"]):not(.is-editing) {
+.canvas-node:has(.tag[href="#node-crime-scene-tape"], .node-crime-scene-tape):not(.is-editing) {
     
     .canvas-node-container {
         border: none;
@@ -21,6 +21,6 @@
     }
 }
 
-.canvas-node:not(.is-editing) .tag[href="#node-crime-scene-tape"] {
+.canvas-node:not(.is-editing) :is(.tag[href="#node-crime-scene-tape"], .node-crime-scene-tape) {
     display: none;
 }
