--- a/scss/canvas/_canvas-node-image.scss
+++ b/scss/canvas/_canvas-node-image.scss
@@ -1,4 +1,4 @@
-.canvas-node:has(.tag[href="#node-image"]):not(.is-editing) {
+.canvas-node:has(.tag[href="#node-image"], .node-image):not(.is-editing) {
     --p-spacing: 0;
     --image-shadow-offset: 0;
 
@@ -35,6 +35,6 @@
     }
 }
 
-.canvas-node:not(.is-editing) .tag[href="#node-image"] {
+.canvas-node:not(.is-editing) :is(.tag[href="#node-image"], .node-image) {
     display: none;
 }
