--- a/scss/canvas/_canvas-node-large.scss
+++ b/scss/canvas/_canvas-node-large.scss
@@ -2,12 +2,12 @@ body {
     --font-size-node-large: 5em;
 }
 
-.canvas-node:has(.tag[href="#node-large"]):not(.is-editing) {
+.canvas-node:has(.tag[href="#node-large"], .node-large):not(.is-editing) {
     .markdown-preview-view {
         font-size: var(--font-size-node-large);
     }
 }
 
-.canvas-node:not(.is-editing) .tag[href="#node-large"] {
+.canvas-node:not(.is-editing) :is(.tag[href="#node-large"], .node-large) {
     display: none;
 }
