--- a/scss/canvas/_canvas-node-text-color-invert.scss
+++ b/scss/canvas/_canvas-node-text-color-invert.scss
@@ -1,9 +1,9 @@
-.canvas-node:has(.tag[href="#node-text-color-invert"]):not(.is-editing) {
+.canvas-node:has(.tag[href="#node-text-color-invert"], .node-text-color-invert):not(.is-editing) {
     .markdown-preview-view {
         color: rgb(var(--mono-rgb-0));
     }
 }
 
-.canvas-node:not(.is-editing) .tag[href="#node-text-color-invert"] {
+.canvas-node:not(.is-editing) :is(.tag[href="#node-text-color-invert"], .node-text-color-invert) {
     display: none;
 }
