--- a/scss/canvas/_canvas-node-title-neon.scss
+++ b/scss/canvas/_canvas-node-title-neon.scss
@@ -1,4 +1,4 @@
-.canvas-node:has(.tag[href="#node-title-neon"]):not(.is-editing) {
+.canvas-node:has(.tag[href="#node-title-neon"], .node-title-neon):not(.is-editing) {
     
     .canvas-node-container {
         border: none;
@@ -22,6 +22,6 @@
     }
 }
 
-.canvas-node:not(.is-editing) .tag[href="#node-title-neon"] {
+.canvas-node:not(.is-editing) :is(.tag[href="#node-title-neon"], .node-title-neon) {
     display: none;
 }
