--- a/scss/editor/lists/_list-reversed.scss
+++ b/scss/editor/lists/_list-reversed.scss
@@ -1,22 +1,22 @@
-:is(ul, ol):has(> li > .tag[href='#list-reversed']) {
+:is(ul, ol):has(> li > :is(.tag[href='#list-reversed'], .list-reversed)) {
     transform: scaleY(-1);
 
     > li {
         transform: scaleY(-1);
     }
 
-    > li > .tag[href='#list-reversed'] {
+    > li > :is(.tag[href='#list-reversed'], .list-reversed) {
         display: none;
     }
 }
 
 
-:is(ul, ol):has(> li > .tag[href='#list-reversed-all']) {
+:is(ul, ol):has(> li > :is(.tag[href='#list-reversed-all'], .list-reversed-all)) {
     &, ul, ol, li {
         transform: scaleY(-1);
     }
 
-    .tag[href='#list-reversed-all'] {
+    :is(.tag[href='#list-reversed-all'], .list-reversed-all) {
         display: none;
     }
 }
