--- a/snippets/canvas/canvas-node-title-neon.css
+++ b/snippets/canvas/canvas-node-title-neon.css
@@ -2,23 +2,23 @@
 FAS - Canvas Node Title Neon
 Author: ElsaTam (Kapirklaa in Discord)
 */
-.canvas-node:has(.tag[href="#node-title-neon"]):not(.is-editing) .canvas-node-container {
+.canvas-node:has(.tag[href="#node-title-neon"], .node-title-neon):not(.is-editing) .canvas-node-container {
   border: none;
 }
-.canvas-node:has(.tag[href="#node-title-neon"]):not(.is-editing):not(:is(.is-dragging, :hover)) .canvas-node-container {
+.canvas-node:has(.tag[href="#node-title-neon"], .node-title-neon):not(.is-editing):not(:is(.is-dragging, :hover)) .canvas-node-container {
   box-shadow: none;
 }
-.canvas-node:has(.tag[href="#node-title-neon"]):not(.is-editing) .canvas-node-content {
+.canvas-node:has(.tag[href="#node-title-neon"], .node-title-neon):not(.is-editing) .canvas-node-content {
   background: none;
 }
-.canvas-node:has(.tag[href="#node-title-neon"]):not(.is-editing) .markdown-preview-view {
+.canvas-node:has(.tag[href="#node-title-neon"], .node-title-neon):not(.is-editing) .markdown-preview-view {
   font-family: "Neon Sans", Arial, Helvetica, sans-serif;
   text-align: center;
   color: rgb(var(--canvas-color));
   text-shadow: 0 0 0.1em rgba(var(--canvas-color), 0.8), 0 0 0.2em rgba(var(--canvas-color), 0.2), 0 0 0.3em rgba(var(--canvas-color), 0.3), 0 0 0.4em rgba(var(--canvas-color), 0.5), 0 0 0.5em rgba(var(--canvas-color), 1);
 }
 
-.canvas-node:not(.is-editing) .tag[href="#node-title-neon"] {
+.canvas-node:not(.is-editing) :is(.tag[href="#node-title-neon"], .node-title-neon) {
   display: none;
 }
 
